Finished landing-page template layout

--- a/index.html
+++ b/index.html
@@ -32,40 +32,48 @@
 			</div>	
 		</div>
 
-		<div class="info">
-			<div class="title">Some Random Information.</div>
+		<div class="info-section">
+			<div class="title">Some random information.</div>
 
-			<div class="icon">
-				<div class="image-icon"></div>	
-				<div class="text">random infooo.</div>	
-			</div>
+			<div class="info-container">
+				<div class="icon icon-1">
+					<div class="image-icon"></div>	
+					<div class="text">This is some subtext under an illustration or image</div>	
+				</div>
 
-			<div class="icon">
-				<div class="image-icon"></div>	
-				<div class="text">random infooo.</div>	
-			</div>
+				<div class="icon icon-2">
+					<div class="image-icon"></div>	
+					<div class="text">This is some subtext under an illustration or image</div>	
+				</div>
 
-			<div class="icon">
-				<div class="image-icon"></div>	
-				<div class="text">random infooo.</div>	
-			</div>
+				<div class="icon icon-3">
+					<div class="image-icon"></div>	
+					<div class="text">This is some subtext under an illustration or image</div>	
+				</div>
 
-			<div class="icon">
-				<div class="image-icon"></div>	
-				<div class="text">random infooo.</div>	
-			</div>
+				<div class="icon icon-4">
+					<div class="image-icon"></div>	
+					<div class="text">This is some subtext under an illustration or image</div>	
+				</div>
+			</div>	
 		</div>
 
 		<div class="quote">
-			<div>The quote itself lol.</div>	
-			<div><strong>The Author</strong></div>	
+			<div class="quote-container">
+				<div class="quote-text">The quote itself goes here where I can see him, so it may fill up the space, but who am I to have so much grace.</div>	
+				<div class="quote-author"><strong>The Author</strong></div>	
+			</div>	
 		</div>	
 
 		<div class="action">
 			<div class="content">
-				<div>Main hero</div>	
-				<div>Secundary hero</div>	
-				<button>Sign Up</button>	
+				<div>
+					<div class="action-main">Call to action! It's time!</div>	
+					<div class="action-sec">Sign up for our product by clicking the button right over there!</div>	
+				</div>
+				<button>
+					<strong>Sign Up</strong>
+				</button>	
 			</div>	
 		</div>	
 
@@ -75,4 +83,3 @@
 
 	</body>
 </html>
-
