Landing page project finished. With an Origami theme.

--- a/index.html
+++ b/index.html
@@ -1,84 +1,119 @@
+<!DOCTYPE html>
 <html>
-	<!DOCTYPE html>
 	<head>
-		<title>Landing Page</title>
+		<title>Origami Page</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="styles/style.css">
+		<link rel="shortcut icon" href="origami.ico" type="image/x-icon">
 	</head>
 
 	<body>
 		<div class="header">
 			<div class="header-nav">
-				<div class="logo">Header Logo</div>	
+				<div class="logo">
+					<img src="images/origami.png">
+				</div>	
 
 				<ul>
-					<li><a href="https://www.google.com">header link one</a></li>	
-					<li><a href="https://www.google.com">header link two</a></li>	
-					<li><a href="https://www.google.com">header link three</a></li>	
+					<li><a href="https://www.youtube.com/hashtag/origami" target="_blank">
+							<div>
+								<img src="images/youtube.png"></img>	
+								Origami
+							</div>
+						</a></li>	
+						<li><a href="https://www.instagram.com/explore/tags/origami/" target="_blank">
+								<div>
+									<img src="images/instagram.png"></img>	
+									Origami
+								</div>
+							</a></li>	
+							<li><a href="https://www.flickr.com/search/?text=origami" target="_blank">
+									<div>
+										<img src="images/flickr.png"></img>	
+										Origami
+									</div>
+								</a></li>	
 				</ul>	
 			</div>
 
 			<div class="header-content">
 				<div class="text">
-					<div class="hero-main">This website is awesome</div>	
-					<div class="hero-sec">This website has some subtext that goes here to make something I do not yet know actually, but please don't be surprise.</div>	
-					<button>Sign up</button>	
+					<div class="hero-main">Origami is awesome</div>	
+					<div class="hero-sec">Origami is awesome! And I can show you more.</div>	
+					<button>See more</button>	
 				</div>	
 
 				<div class="media">
-					<img class="image" src="images/apple.jpg">
+					<img class="image" src="images/origami-background.jpg">
 				</div>	
 
 			</div>	
 		</div>
 
 		<div class="info-section">
-			<div class="title">Some random information.</div>
+			<div class="title">Some origami models.</div>
 
 			<div class="info-container">
-				<div class="icon icon-1">
-					<div class="image-icon"></div>	
-					<div class="text">This is some subtext under an illustration or image</div>	
-				</div>
+				<div class="info-container-2">
+					<div class="icon icon-1">
+						<a href="https://www.instagram.com/p/CL72BUrp33B/" target="_blank">
+							<img class="image-icon" src="images/origamicat.jpg">
+						</a>
+						<div class="text">Cat<br>Created by J. Aníbal Voyer<br>Folded by Marcos Costa</div>	
+					</div>
 
-				<div class="icon icon-2">
-					<div class="image-icon"></div>	
-					<div class="text">This is some subtext under an illustration or image</div>	
-				</div>
+					<div class="icon icon-2">
+						<a href="https://www.instagram.com/p/CKoqJizpOSt/" target="_blank">
+							<img class="image-icon" src="images/origamidragon.jpg">
+						</a>	
+						<div class="text">Riujin 1.2<br>Created by Satoshi Kamiya<br>Folded by Marcos Costa</div>	
+					</div>
+				</div>	
 
-				<div class="icon icon-3">
-					<div class="image-icon"></div>	
-					<div class="text">This is some subtext under an illustration or image</div>	
-				</div>
+				<div class="info-container-2">
+					<div class="icon icon-3">
+						<a href="https://www.instagram.com/p/CLsMGFVp2Uc/" target="_blank">
+							<img class="image-icon" src="images/origamibird.jpg">
+						</a>	
+						<div class="text">Simple Hummingbird<br>Created by Michael G. Lafosse<br>Folder by Marcos Costa</div>	
+					</div>
 
-				<div class="icon icon-4">
-					<div class="image-icon"></div>	
-					<div class="text">This is some subtext under an illustration or image</div>	
-				</div>
+					<div class="icon icon-4">
+						<a href="https://www.instagram.com/p/CK83ThdpXJz/" target="_blank">
+							<img class="image-icon" src="images/origamicar.jpg">
+						</a>	
+						<div class="text">Pickup Truck<br>Created by Muneji Fuchimoto<br>Folded by Marcos Costa</div>	
+					</div>
+				</div>	
 			</div>	
 		</div>
 
 		<div class="quote">
 			<div class="quote-container">
-				<div class="quote-text">The quote itself goes here where I can see him, so it may fill up the space, but who am I to have so much grace.</div>	
-				<div class="quote-author"><strong>The Author</strong></div>	
+				<div class="quote-text">"Over all, I want you to discover the joy of creation by your own hand… The possibility of creation from paper is infinite."</div>	
+				<div class="quote-author"><strong>– Akira Yoshikawa</strong></div>	
 			</div>	
 		</div>	
 
 		<div class="action">
 			<div class="content">
 				<div>
-					<div class="action-main">Call to action! It's time!</div>	
-					<div class="action-sec">Sign up for our product by clicking the button right over there!</div>	
+					<div class="action-main">It's time to know more about Origami!</div>	
+					<div class="action-sec">Get to know more about Origami by clicking the button over there!</div>	
 				</div>
 				<button>
-					<strong>Sign Up</strong>
+					<strong>See more</strong>
 				</button>	
 			</div>	
 		</div>	
 
 		<div class="footer">
-			<a href="#">Copyright &copy Marcos Ramires 2022</a>
+			<p>
+			Copyright &copy Marcos Ramires 2023
+			</p>
+			<a href="https://github.com/neomoon007/landing-page" target="_blank">
+				<img src="images/github.png">
+			</a>	
 		</div>	
 
 	</body>
